# cool_progs

./: .gitignore
4-semester/00-client-server-task/: .gitignore  CMakeLists.txt  Doxyfile  README.md  instructions.md
4-semester/00-client-server-task/.ci/: ci.yaml  linux-steps.yaml
4-semester/00-client-server-task/.github/: lint.sh
4-semester/00-client-server-task/.github/workflows/: main.yml
4-semester/00-client-server-task/CMake/: FindHttplib.cmake
4-semester/00-client-server-task/doc/: algorithms.dox  mainpage.dox  topological_sort.dox
4-semester/00-client-server-task/include/: graph.hpp  iterators.hpp  oriented_graph.hpp  topological_sort.hpp  weighted_graph.hpp  weighted_oriented_graph.hpp
4-semester/00-client-server-task/methods/: main.cpp  methods.hpp  topological_sort_method.cpp
4-semester/00-client-server-task/tests/: graph_test.cpp  io.hpp  main.cpp  oriented_graph_test.cpp  test.hpp  test_core.hpp  topological_sort_test.cpp  weighted_graph_test.cpp  weighted_oriented_graph_test.cpp
4-semester/1.template.4points/: main.cpp  vector  vector.h
4-semester/2.unicode.html.latex.5points/html/: index.html
4-semester/2.unicode.html.latex.5points/latex/: newton_leibniz.tex
4-semester/2.unicode.html.latex.5points/unicode/: newton_leibniz.txt
4-semester/205-24-geometry-example/: .gitignore  CMakeLists.txt  Doxyfile  README.md
4-semester/205-24-geometry-example/.ci/: ci.yaml  linux-steps.yaml
4-semester/205-24-geometry-example/CMake/: FindNlohmannJson.cmake
4-semester/205-24-geometry-example/doc/: algorithms.dox  mainpage.dox
4-semester/205-24-geometry-example/doc/algorithms/: insertion_sort.dox
4-semester/205-24-geometry-example/include/: common.hpp  edge.hpp  edge_impl.hpp  insertion_sort.hpp  orientation.hpp  point.hpp  point_impl.hpp  polygon.hpp  polygon_impl.hpp
4-semester/205-24-geometry-example/methods/: insertion_sort_method.cpp  main.cpp  methods.hpp
4-semester/205-24-geometry-example/tests/: edge_test.cpp  insertion_sort_test.cpp  io.hpp  main.cpp  orientation_test.cpp  point_test.cpp  polygon_test.cpp  test.hpp  test_core.cpp  test_core.hpp
prog1/: main.cpp
